cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_view_box_trivial1.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/view_box\").arg(\"analyze\").arg(\"compare\").arg(\"permit_all.cedar\").arg(\"deny_all.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+-------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                              |
+---------------+------------+--------------+-------------------------------------+
| User          | view       | Box          | pset1 is more permissive than pset2 |
+---------------+------------+--------------+-------------------------------------+
| User          | view       | Thing        | pset1 is more permissive than pset2 |
+---------------+------------+--------------+-------------------------------------+
