cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_view_box_trivial2.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/view_box\").arg(\"analyze\").arg(\"compare\").arg(\"deny_all.cedar\").arg(\"permit_all.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+---------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                    |
+---------------+------------+--------------+---------------------------------------------------------------------------+
| User          | view       | Box          | pset1 is less permissive than pset2                                       |
|               |            |              | Example: principal: User::"", action: Action::"view", resource: Box::""   |
|               |            |              | context: { n1: "" }                                                       |
|               |            |              | entities: [                                                               |
|               |            |              |   Account::"",                                                            |
|               |            |              |   Action::"view",                                                         |
|               |            |              |   Box::"" {                                                               |
|               |            |              |     description: "",                                                      |
|               |            |              |     owner: User::"",                                                      |
|               |            |              |     private: false,                                                       |
|               |            |              |   },                                                                      |
|               |            |              |   User::"" {                                                              |
|               |            |              |     account: Account::"",                                                 |
|               |            |              |   },                                                                      |
|               |            |              | ]                                                                         |
+---------------+------------+--------------+---------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is less permissive than pset2                                       |
|               |            |              | Example: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: { n1: "" }                                                       |
|               |            |              | entities: [                                                               |
|               |            |              |   Account::"",                                                            |
|               |            |              |   Action::"view",                                                         |
|               |            |              |   Thing::"" {                                                             |
|               |            |              |     description: "",                                                      |
|               |            |              |     owner: User::"",                                                      |
|               |            |              |     private: false,                                                       |
|               |            |              |   },                                                                      |
|               |            |              |   User::"" {                                                              |
|               |            |              |     account: Account::"",                                                 |
|               |            |              |   },                                                                      |
|               |            |              | ]                                                                         |
+---------------+------------+--------------+---------------------------------------------------------------------------+
