cedar-lean-cli/tests/snapshots/integration_tests__analyze_policies_tabular_demo4.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/file_share_demo\").arg(\"analyze\").arg(\"policies\").arg(\"policies4.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
Found 0 request environment specific warnings:
+---------------+------------+--------------+----------+
| PrincipalType | ActionName | ResourceType | Findings |
+---------------+------------+--------------+----------+
