cedar-lean-cli/tests/snapshots/integration_tests__analyze_policies_tabular_view_box_p1.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/view_box\").arg(\"analyze\").arg(\"policies\").arg(\"policies1.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
Found 2 request environment specific warnings:
+---------------+------------+--------------+---------------------------------------------+
| PrincipalType | ActionName | ResourceType | Findings                                    |
+---------------+------------+--------------+---------------------------------------------+
| User          | view       | Box          | Redundant Policies: `policy0` and `policy1` |
+---------------+------------+--------------+---------------------------------------------+
| User          | view       | Thing        | Redundant Policies: `policy0` and `policy1` |
+---------------+------------+--------------+---------------------------------------------+
